# pureChemistryModel-of7

./: Allwmake  readme.md
Sandia/: log.reactingFoam
Sandia/0/: CH4  CO  CO2  H  H2  H2O  N2  O  O2  OH  T  U  Ydefault  alphat  chi  epsilon  k  nut  p  yWall
Sandia/constant/: chemistryProperties  combustionProperties  reactions2  reactionsGRI  reactions_test  thermophysicalProperties  thermos2
Sandia/constant/polyMesh/: boundary  faces  neighbour  owner  points
Sandia/system/: controlDict  decomposeParDict  fvSchemes  fvSolution
code/pureChemistryModel/Make/: files  options
code/pureChemistryModel/pureChemistryModel/: BasicChemistryModels.C
code/pureChemistryModel/pureChemistryModel/pureChemistryModel/: pureChemistryModel.C  pureChemistryModel.H  pureChemistryModelI.H
code/pureChemistryModel/pureChemistrySolver/: makeChemistrySolverTypes.H
code/src/: CMakeLists.txt  Macro.H
code/src/ChemistryModel/: odeChemistrySolvers.C
code/src/ChemistryModel/basicFastChemistryModel/: basicFastChemistryModel.C  basicFastChemistryModel.H  basicFastChemistryModelI.H  basicFastChemistryModelNew.C
code/src/ChemistryModel/fastChemistryModel/: FastChemistryModel.C  FastChemistryModel.H  FastChemistryModelI.H  FastChemistryModel_localEulerSolve.H  FastChemistryModel_transientSolve.H
code/src/ChemistryModel/fastChmistrySolver/: fastChemistrySolver.C  fastChemistrySolver.H
code/src/LUsolver/: LUsolver.C  LUsolver.H  LUsolverI.H
code/src/Make/: files  options
code/src/ODE/OptRodas34/: OptRodas34.C  OptRodas34.H
code/src/ODE/OptRosenbrock34/: OptRosenbrock34.C  OptRosenbrock34.H
code/src/ODE/OptSeulex/: OptSeulex.C  OptSeulex.H
code/src/Reaction/: ChemicalEquilibriumFunctionI.H  Jacobian.C  JacobianFunctionI.H  OptReaction.C  OptReaction.H  ReactionFunctionI.H  ReactionRate.C  Tc.C  ThermoFunctionI.H  pressureReactionFunctionI.H  thirdBodyReactionI.H
code/src/asmCode/: svml_d_gnuexp4_core_avx2.S  svml_d_gnuexp_data.S  svml_d_gnuexp_data.h  svml_d_gnulog4_core_avx2.S  svml_d_gnulog_data.S  svml_d_gnulog_data.h  svml_d_gnupow4_core_avx2.S  svml_d_gnupow_data.S  svml_d_gnupow_data.h  vec_math_avx2.H
code/src/dataBlock/: dataBlock.C  dataBlock.H
code/src/dataBlock/simpleDataBlock/: simpleDataBlock.C  simpleDataBlock.H
